--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -7,5 +7,8 @@ jobs:
     - uses: actions/checkout@v4
     - run: cargo build --release
       working-directory: .github/workflow-bin
-    - run: ls
-      working-directory: .github/workflow-bin/target
+    - uses: Shopify/upload-to-release
+      with:
+        name: workflow-bin
+        path: .github/workflow-bin/target/release/workflow-bin
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
