--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -7,8 +7,6 @@ jobs:
     - uses: actions/checkout@v4
     - run: cargo build --release
       working-directory: .github/workflow-bin
-    - uses: Shopify/upload-to-release@v2.0.0
+    - uses: softprops/action-gh-release@v2
       with:
-        name: workflow-bin
-        path: .github/workflow-bin/target/release/workflow-bin
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        files: .github/workflow-bin/release/workflow-bin
