--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build-workflow-bin:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
     - uses: actions/checkout@v4
     - run: cargo build --release
