--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,9 @@ jobs:
     - run: curl -LO https://github.com/czy-29/29bot.com/releases/download/workflow-bin-v5/workflow-bin
     - run: chmod +x workflow-bin
     - run: ./workflow-bin start
+    - uses: yesolutions/mirror-action@master
+      with:
+        REMOTE: 'https://gitlab.com/czy29/29bot.com.git'
+        GIT_USERNAME: czy29
+        GIT_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
+    - run: ./workflow-bin ok
