--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
     - uses: yesolutions/mirror-action@master
       with:
         REMOTE: 'https://gitlab.com/czy29/29bot.com.git'
+        REMOTE_NAME: gitlab
         GIT_USERNAME: czy29
         GIT_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
     - uses: yesolutions/mirror-action@master
       with:
         REMOTE: 'https://gitee.com/czy29/29bot.com.git'
+        REMOTE_NAME: gitee
         GIT_USERNAME: czy29
         GIT_PASSWORD: ${{ secrets.GITEE_PASSWORD }}
     - run: ./workflow-bin ok
