--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
     - run: curl -LO https://github.com/czy-29/29bot.com/releases/download/workflow-bin-v5/workflow-bin
     - run: chmod +x workflow-bin
     - run: ./workflow-bin start
-    - uses: actions/checkout@v4
     - uses: yesolutions/mirror-action@master
       with:
         REMOTE: 'https://gitlab.com/czy29/29bot.com.git'
@@ -24,5 +23,6 @@ jobs:
         REMOTE_NAME: gitee
         GIT_USERNAME: czy29
         GIT_PASSWORD: ${{ secrets.GITEE_PASSWORD }}
+    - run: git checkout main
     - run: ls
     - run: ./workflow-bin ok
