--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,7 @@ jobs:
     - run: chmod +x workflow-bin
     - run: ./workflow-bin start
     - uses: actions/checkout@v4
+    - run: curl -LO https://github.com/czy-29/29bot.com/releases/download/workflow-bin-v5/workflow-bin
+    - run: chmod +x workflow-bin
     - run: ls
     - run: ./workflow-bin ok
