--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,12 @@ env:
   PUSHOVER_APP_TOKEN: ${{ secrets.PUSHOVER_APP_TOKEN }}
   HUGO_DRAFT_BASE_URL: ${{ secrets.HUGO_DRAFT_BASE_URL }}
   DEPLOY_GITHUB_ACCESS_TOKEN: ${{ secrets.DEPLOY_GITHUB_ACCESS_TOKEN }}
+  OSS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
+  OSS_ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
+  OSS_DRAFT_BUCKET: ${{ secrets.OSS_DRAFT_BUCKET }}
+  OSS_DRAFT_ENDPOINT: ${{ secrets.OSS_DRAFT_ENDPOINT }}
+  OSS_PROD_BUCKET: ${{ secrets.OSS_PROD_BUCKET }}
+  OSS_PROD_ENDPOINT: ${{ secrets.OSS_PROD_ENDPOINT }}
 
 jobs:
   main:
