--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ env:
   PUSHOVER_APP_TOKEN: ${{ secrets.PUSHOVER_APP_TOKEN }}
   HUGO_DRAFT_BASE_URL: ${{ secrets.HUGO_DRAFT_BASE_URL }}
   DEPLOY_GITHUB_ACCESS_TOKEN: ${{ secrets.DEPLOY_GITHUB_ACCESS_TOKEN }}
+  DEPLOY_GITHUB_USER_EMAIL: ${{ secrets.DEPLOY_GITHUB_USER_EMAIL }}
+  DEPLOY_GITHUB_USER_NAME: ${{ secrets.DEPLOY_GITHUB_USER_NAME }}
   OSS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
   OSS_ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
   OSS_DRAFT_BUCKET: ${{ secrets.OSS_DRAFT_BUCKET }}
