不知道是什么东西但主题原作者加上了我也给它加上

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,8 @@ baseURL = 'https://29bot.com/'
 languageCode = 'zh-cn'
 title = '29的主页'
 theme = 'github-style'
+pygmentsCodeFences = true
+pygmentsUseClasses = true
 
 [params]
 favicon = "/images/avatar.jpg"
