--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://29bot.com/'
 languageCode = 'zh-cn'
-title = '29的主页'
+title = '29的个人主页'
 theme = 'github-style'
 pygmentsCodeFences = true
 pygmentsUseClasses = true
