更新时间相关设置

--- a/hugo.toml
+++ b/hugo.toml
@@ -10,6 +10,7 @@ pygmentsUseClasses = true
 
 [frontmatter]
 date = [':filename', ':default']
+lastmod = [":git", ":fileModTime", ":default"]
 
 [params]
 lastmod = true
