--- a/hugo.toml
+++ b/hugo.toml
@@ -15,3 +15,12 @@ date = [':filename', ':default']
 favicon = "/images/avatar.jpg"
 avatar = "/images/avatar.jpg"
 headerIcon = "/images/github-mark-white.png"
+keywords = "blog, diary, personal homepage"
+userStatusEmoji = "🎵"
+
+author = "29"
+github = "czy-29"
+description = "29的日记本：记录完整而真实的29"
+location = "中国"
+email = "791603901@qq.com"
+url = "https://29bot.com"
