--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - uses: yesolutions/mirror-action@master
       with:
         REMOTE: 'https://gitlab.com/czy29/29bot.com.git'
